--- a/src/snippets/popup-error.liquid
+++ b/src/snippets/popup-error.liquid
@@ -21,6 +21,8 @@
   </script>
 {% endraw %}
 
-<script>
-  // var PopupError = new Focus('#PopupError');
+<script type="text/javascript">
+  document.addEventListener('DOMContentLoaded', function(event) {
+    window.PopupError = new Focus('#PopupError');
+  });
 </script>
