--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -34,6 +34,10 @@
   {% include 'style-tags', layout: 'theme' %}
   {% include 'css-variables' %}
 
+  <!-- TESTING ONLY -->
+  {{ '//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js' | script_tag }}
+  {{ 'api.jquery.js' | shopify_asset_url | script_tag }}
+
   <script>
     document.documentElement.className = document.documentElement.className.replace('no-js', '');
 
