--- a/src/sections/index-image-with-text.liquid
+++ b/src/sections/index-image-with-text.liquid
@@ -14,8 +14,7 @@
   - Button link: link of the button
 
   Dependencies:
-  - Grid50.scss
-  - Grid50.flex.scss (will work without)
+  - @elkfox/grid
 {%- endcomment -%}
 
 <section class="row flex v-center">
