--- a/src/sections/footer.liquid
+++ b/src/sections/footer.liquid
@@ -1,4 +1,4 @@
-<footer>
+<footer class="container l">
 
   {%- assign social_accounts = 'Facebook, Twitter, Pinterest, Instagram, Snapchat, Tumblr, YouTube, Vimeo,' | split: ', ' -%}
   <ul>
