--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -64,58 +64,12 @@
 
   <main role="main" id="MainContent">
     {{ content_for_layout }}
-
-
-    {{ '//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js' | script_tag }}
-
-    <script type="text/javascript">
-      var Cart = {{ cart | json }};
-
-      function getCart() {
-        jQuery.getJSON('/cart.js', function(cart) {
-          var Cart = cart;
-        });
-      }
-
-      function addItem(form) {
-        jQuery.ajax({
-          type: 'POST',
-          url: '/cart/add.js',
-          dataType: 'json',
-          data: jQuery(form).serialize(),
-          success: function(data) {
-            addItemSuccess(data);
-          },
-          error: function(data) {
-            addItemFail(data);
-          }
-        });
-      }
-
-      function addItemSuccess(product) {
-        getCart();
-        var newQuantity = Cart.item_count + product.quantity;
-        jQuery('[data-cart-feedback]').html(product.title + ' was added to the cart!');
-        jQuery('[data-cart-item-count]').replaceWith(newQuantity);
-      }
-
-      function addItemFail(data) {
-        var parsedJSON = JSON.parse(data.responseText);
-        jQuery('[data-cart-feedback]').html(parsedJSON.description);
-      }
-
-      jQuery(document).ready(function(){
-        $('[data-add-to-cart]').on('click', function(e) {
-          var form = $(this).parents('form:first');
-          e.preventDefault();
-          addItem(form);
-        });
-      });
-    </script>
-
   </main>
 
   {% section 'footer' %}
+
+  {{ '//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js' | script_tag }}
+  {% include 'cart' %}
 
 </body>
 </html>
