--- a/src/sections/hero-media.liquid
+++ b/src/sections/hero-media.liquid
@@ -9,34 +9,22 @@
   adding an alternate image option for small screens that is square or portrait.
 {%- endcomment -%}
 
-<section class="hero-media s-hide">
+<section class="hero-media">
   {% for block in section.blocks %}
-    <div class="block_{{ forloop.index }}">
+    <div class="hero-media__block block_{{ forloop.index }}">
       {% if block.settings.image != blank %}
-        {% include 'responsive-bg-image' with
-          image: block.settings.image,
-          ratio: 0.5
-        %}
+        <div
+          style="background-image:url({{ block.settings.image | img_url: '6x' }});background-size:cover;"
+          class="lazyload hero-media__background-image"
+          data-bgset="{% include 'responsive-bg-image', image: block.settings.image %}">
+        </div>
       {% else %}
-        <div style="background-color:#EEE;padding-top:50%;overflow:hidden;">
+        <div class="hero-media__background-image">
           {{ 'image' | placeholder_svg_tag: 'placeholder-svg' }}
-          {%- comment -%}
-            Placholder styling for demonstration purposes only
-          {%- endcomment -%}
-          <style>
-            .block_{{ forloop.index }} .placeholder-svg {
-              position: absolute;
-              top: 0;
-              bottom: 0;
-              height: 100%;
-              width: 100%;
-              opacity: 0.25;
-            }
-          </style>
         </div>
       {% endif %}
 
-      <div class="overlay-content container s">
+      <div class="hero-media__content">
         {% if block.settings.title != blank %}
           <h2>{{ block.settings.title | escape }}</h2>
         {% endif %}
@@ -50,19 +38,19 @@
           </a>
         {% endif %}
       </div>
-    {% endfor %}
+    </div>
+  {% endfor %}
 
-    {% if section.blocks.size == 0 %}
-      <div class="placeholder-noblocks">
-        {{ 'onboarding.no_content' | t }}
-      </div>
-    {% endif %}
-  </div>
+  {% if section.blocks.size == 0 %}
+    <div class="placeholder-noblocks">
+      {{ 'onboarding.no_content' | t }}
+    </div>
+  {% endif %}
 </section>
 
 {% schema %}
   {
-    "name": "Image with text overlay",
+    "name": "Hero media",
     "max_blocks": 3,
     "blocks": [
       {
@@ -84,7 +72,7 @@
             "type": "richtext",
             "id": "text",
             "label": "Text",
-            "default": "<p>This is a great place to show off featured content comprimising background images, text content and buttons.</p>"
+            "default": "<p>This is a great place to show off featured content comprised of background images, text content and buttons.</p>"
           },
           {
             "type": "text",
