--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -22,6 +22,7 @@ $color-success-bg: #000000;
 
 // Typography
 $font-heading: var(--font-heading);
+$font-heading-weight: var(--font-body-weight);
 $font-body: var(--font-body);
 $font-body-weight: var(--font-body-weight);
 $font-body-style: var(--font-body-style);
@@ -49,12 +50,12 @@ $large-up: 'large-up';
 $widescreen: 'widescreen';
 
 $breakpoints: (
-  $small '(max-width: #{$grid-medium - 1})',
-  $medium '(min-width: #{$grid-medium}) and (max-width: #{$grid-large - 1})',
-  $medium-down '(max-width: #{$grid-large - 1})',
+  $small '(max-width: #{$grid-medium - 0.01})',
+  $medium '(min-width: #{$grid-medium}) and (max-width: #{$grid-large - 0.01})',
+  $medium-down '(max-width: #{$grid-large - 0.01})',
   $medium-up '(min-width: #{$grid-medium})',
-  $large '(min-width: #{$grid-large}) and (max-width: #{$grid-widescreen - 1})',
-  $large-down '(max-width: #{$grid-widescreen - 1})',
+  $large '(min-width: #{$grid-large}) and (max-width: #{$grid-widescreen - 0.01})',
+  $large-down '(max-width: #{$grid-widescreen - 0.01})',
   $large-up '(min-width: #{$grid-large})',
   $widescreen '(min-width: #{$grid-widescreen})'
 );
