Ajax cart Alpha :sparkles:

--- a/src/layout/password.liquid
+++ b/src/layout/password.liquid
@@ -38,12 +38,10 @@
   </main>
 
   <footer>
-    {% capture shopify_link %}
-      <a href="//www.shopify.com" target="_blank" rel="nofollow" title="Create your own online store with Shopify">
-        {% include 'icon-shopify-logo' %}
-        <span class="icon-fallback-text">Shopify</span>
-      </a>
-    {% endcapture %}
+    {%- capture shopify_link -%}
+      <a href="//www.shopify.com" target="_blank" rel="nofollow" title="Create your own online store with Shopify">Shopify</a>
+    {%- endcapture -%}
+    
     {{ 'general.password_page.powered_by_shopify_html' | t: shopify: shopify_link }}
   </footer>
 
