--- a/src/templates/index.liquid
+++ b/src/templates/index.liquid
@@ -1,1 +1,6 @@
+{%- comment -%}
+  You should include a H1 somewhere on your home page
+{%- endcomment -%}
+<h1>Welcome to {{ shop.name }}</h1>
+
 {{ content_for_index }}
