--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -1,3 +1,25 @@
-#shopify-section-header {
-  @include container(100%, 1rem 2rem);
+.header {
+  @include prefixer(display, flex, ('webkit', 'moz', 'ms', 'spec'));
+  @include prefixer(justify-content, space-between, ('webkit', 'moz', 'ms', 'spec'));
+  padding: 2rem;
+}
+
+.logo {
+  font-family: $font-heading;
+  font-weight: $font-heading-weight;
+  font-size: 3rem;
+}
+
+.nav {
+  @include prefixer(display, flex, ('webkit', 'moz', 'ms', 'spec'));
+  @include prefixer(justify-content, space-between, ('webkit', 'moz', 'ms', 'spec'));
+  padding: 2rem;
+
+  ul {
+    list-style: none;
+  }
+
+  li {
+    display: inline;
+  }
 }
