--- a/src/templates/page.liquid
+++ b/src/templates/page.liquid
@@ -1,5 +1,8 @@
-<h1>{{ page.title }}</h1>
+<div class="page-layout">
+  <h1>{{ page.title }}</h1>
 
-<div class="rte">
-  {{ page.content }}
+  <div class="rte">
+    {{ page.content }}
+  </div>
+
 </div>
