--- a/src/layout/password.liquid
+++ b/src/layout/password.liquid
@@ -20,10 +20,16 @@
   {% include 'social-meta-tags' %}
   {% include 'style-tags', layout: 'password' %}
   {% include 'css-variables' %}
-
   {% include 'script-tags', layout: 'password' %}
 
-  {{ content_for_header }}
+  {%- comment -%}
+    Placing the {{ content_for_header }} tag in a conditional avoids the
+    browser-sync issue described at https://github.com/Shopify/slate/issues/1055
+    This should be resolved when the slate-analytics package is removed
+  {%- endcomment -%}
+  {% if request.host != shop.permanent_domain %}
+    {{ content_for_header }}
+  {% endif %}
 </head>
 
 <body class="template-password">
@@ -41,7 +47,7 @@
     {%- capture shopify_link -%}
       <a href="//www.shopify.com" target="_blank" rel="nofollow" title="Create your own online store with Shopify">Shopify</a>
     {%- endcapture -%}
-    
+
     {{ 'general.password_page.powered_by_shopify_html' | t: shopify: shopify_link }}
   </footer>
 
