--- a/src/styles/components/icons.scss
+++ b/src/styles/components/icons.scss
@@ -38,10 +38,10 @@ symbol {
 // A generic way to visually hide content while
 // remaining accessible to screen readers (h5bp.com)
 .icon-fallback-text {
-  @include visually-hidden;
+  @include visibility(hidden);
 
   .no-svg & {
-    @include visually-shown(static);
+    @include visibility(visible, static);
   }
 }
 
