--- a/src/styles/password.scss
+++ b/src/styles/password.scss
@@ -1,7 +1,7 @@
 @charset 'UTF-8';
 
 /**
- * [replace with theme name] | Built with Slate
+ * [replace with theme name] | Built with Slate & Concrete
  */
 @import '~normalize.css/normalize';
 @import '~@elkfox/shopify-theme/styles/form-reset.scss';
@@ -26,11 +26,13 @@
 @import './core/typography';
 
 // Components
+// To do: move all sample styling to @elkfox/shopify-theme/
 @import './components/icons';
 @import './components/address-forms';
 @import './components/pagination';
 
 // Sections
+// To do: move header and footer sections to /frame folder
 @import './sections/header';
 @import './sections/footer';
 
