--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -49,7 +49,14 @@
 
   {% include 'script-tags', layout: 'theme' %}
 
-  {{ content_for_header }}
+  {%- comment -%}
+    Placing the {{ content_for_header }} tag in a conditional avoids the
+    browser-sync issue described at https://github.com/Shopify/slate/issues/1055
+    This should be resolved when the slate-analytics package is removed
+  {%- endcomment -%}
+  {% if request.host != shop.permanent_domain %}
+    {{ content_for_header }}
+  {% endif %}
 </head>
 
 <body id="{{ page_title | handle }}" class="template-{{ template.name | handle }}">
