--- a/src/styles/templates/collection.scss
+++ b/src/styles/templates/collection.scss
@@ -1,15 +1,15 @@
 .collection__header {
-  @include container($grid-max-width, 1rem 2rem);
+  @include container($grid-large, 1rem 2rem);
 }
 
 .collection__products {
-  @include container($grid-max-width, 1rem);
-  @include prefixer(display, flex, ('webkit', 'moz', 'ms', 'spec'));
-  @include prefixer(flex-wrap, wrap, ('webkit', 'moz', 'ms', 'spec'));
+  @include container($grid-large, 1rem);
+  @include prefix(display, flex, webkit ms);
+  @include prefix(flex-wrap, wrap, webkit, moz, ms);
 }
 
 .collection__products__product {
-  @include prefixer(flex-basis, 25%, ('webkit', 'moz', 'ms', 'spec'));
+  @include prefix(flex-basis, 25%, webkit);
   padding: 1rem;
 
   .responsive-image__image {
@@ -17,10 +17,10 @@
   }
 
   @include media-query($medium) {
-    @include prefixer(flex-basis, 50%, ('webkit', 'moz', 'ms', 'spec'));
+    @include prefix(flex-basis, 50%, webkit);
   }
 
   @include media-query($small) {
-    @include prefixer(flex-basis, 100%, ('webkit', 'moz', 'ms', 'spec'));
+    @include prefix(flex-basis, 100%, webkit);
   }
 }
