--- a/src/styles/templates/product.scss
+++ b/src/styles/templates/product.scss
@@ -1,13 +1,13 @@
 .product section {
-  @include container($grid-max-width, 1rem);
-  @include prefixer(display, flex, ('webkit', 'moz', 'ms', 'spec'));
-  @include prefixer(flex-wrap, wrap, ('webkit', 'moz', 'ms', 'spec'));
+  @include container($grid-large, 1rem);
+  @include prefix(display, flex, webkit ms);
+  @include prefix(flex-wrap, wrap, webkit, moz, ms);
 
   > div {
     padding: 1rem;
 
     @include media-query($medium-up) {
-      @include prefixer(flex-basis, 50%, ('webkit', 'moz', 'ms', 'spec'));
+      @include prefix(flex-basis, 50%, webkit);
     }
   }
 
