--- a/src/styles/templates/product.scss
+++ b/src/styles/templates/product.scss
@@ -1,7 +1,7 @@
 .product section {
   @include container($grid-large, 1rem);
   @include prefix(display, flex, webkit ms);
-  @include prefix(flex-wrap, wrap, webkit, moz, ms);
+  @include prefix(flex-wrap, wrap, webkit moz ms);
 
   > div {
     padding: 1rem;
