--- a/src/styles/templates/cart.scss
+++ b/src/styles/templates/cart.scss
@@ -8,7 +8,7 @@
 
 .cart-page__summary {
   @include prefix(display, flex, webkit ms);
-  @include prefix(flex-wrap, wrap, webkit, moz, ms);
+  @include prefix(flex-wrap, wrap, webkit moz ms);
   margin-top: 4rem;
 
   @include media-query($medium-up) {
