📦🧹Cookie support test updates

--- a/src/layout/password.liquid
+++ b/src/layout/password.liquid
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="{{ shop.locale }}">
+<html class="no-js no-cookies" lang="{{ shop.locale }}">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,6 +21,10 @@
   {% include 'style-tags', layout: 'password' %}
   {% include 'css-variables' %}
   {% include 'script-tags', layout: 'password' %}
+
+  <script>
+    document.documentElement.className = document.documentElement.className.replace('no-js', '');
+  </script>
 
   {%- comment -%}
     Placing the {{ content_for_header }} tag in a conditional avoids the
