--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js supports-no-cookies" lang="{{ shop.locale }}">
+<html class="no-js no-cookies" lang="{{ shop.locale }}">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
